@@ -1,3 +1,8 @@
+2005-04-04  Francois Dumont  <dums@stlport...>
+
+	* test/unit/mfunptr_test.cpp: Add necessary macro checks for a test
+	that require partial template specialization compiler support.
+
 2005-04-04  Petr Ovtchenkov  <ptr@island...>
 
 	* errno.h, time.h, test_errno.cpp: evc3 and evc4 has no errno.h
